21/02/2025 - v.0.0.1 - ouceda - Nuevo p - Se ha añadido una nueva linea

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -53,7 +53,8 @@
 		</aside>
 	</section>
 	<footer>
-		<p>Pracitca del IES Cristobal de Monroy Lenguaje de marcas</p>
+		<p>Practica del IES Cristobal de Monroy Lenguaje de marcas</p>
+		<p>Hola este p es nuevo y lo hago para enseñar a hacer un commit en github</p>
 	</footer>
 
 
