21/02/2025 - v.0.0.1 - ouceda - Nuevo p - Se ha añadido una nueva linea

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -54,7 +54,7 @@
 	</section>
 	<footer>
 		<p>Practica del IES Cristobal de Monroy Lenguaje de marcas</p>
-		<p>Hola este p es nuevo y lo hago para enseñar a hacer un commit en github</p>
+		<p>Hola este p es nuevo y lo hago para enseñar a hacer commit en github</p>
 	</footer>
 
 
