--- a/HTML/index.html
+++ b/HTML/index.html
@@ -55,9 +55,8 @@
 	<footer>
 		<p>Practica del IES Cristobal de Monroy Lenguaje de marcas</p>
 		<p>Hola este p es nuevo y lo hago para enseñar a hacer commit en github</p>
+		<p>Hola mi asignatura favorita es entorno de desarrollo y voy a hacer pull</p>
 	</footer>
-
-
 </body>
 
 </html>
