21/02/2025 - v.0.0.1 - ouceda - Nuevo p - Se ha añadido una nueva linea

--- a/HTML/Aficiones.html
+++ b/HTML/Aficiones.html
@@ -6,10 +6,11 @@
   <link rel="stylesheet" href="../ESTILOS/Aficiones.css">
 </head>
 <body>
+<fieldset>
 <a href="index.html">Volver</a>
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sed pharetra risus. Donec blandit porttitor nunc, eu volutpat tortor porta vitae.</p>
-<p>Integer lectus nunc, aliquet nec libero nec, commodo aliquet nunc. Donec accumsan, massa sed dapibus cursus, dui urna elementum urna, a bibendum nibh dui eu nibh.</p>
-<p>Aliquam eu lacus ac purus semper lobortis. Donec gravida risus ac ultricies pretium. Sed sit amet suscipit arcu. Morbi ante justo, pulvinar nec efficitur eu,</p>
-<p>elementum sed arcu. Duis id enim eget arcu venenatis sollicitudin at et mauris. Vestibulum vel euismod urna, vel molestie sem.</p>
+<p>Mis aficiones son la programacion, videojuegos, musica y el gimnasio, tambien he visto series como invencible, breaking bad y la casa de papel.</p>
+    <p>Tambien tengo 2 gatos y 2 perros.</p>
+    <img src="../imagenes/BB_T5A-Heisenberg.jpg" height="480" width="360"/>
+</fieldset>
 </body>
 </html>
