--- a/HTML/CV.html
+++ b/HTML/CV.html
@@ -6,8 +6,11 @@
   <link rel="stylesheet" href="../ESTILOS/CV.css">
 </head>
 <body>
+<fieldset>
 <a href="index.html">Volver</a>
+<p>Aqui dejo mi ultimo curriculum que he hecho</p>
 <br/>
 <img src="../imagenes/Óscar uceda Vázquez CV-1.png" height="1500" width="1000"/>
+</fieldset>
 </body>
 </html>
