--- a/HTML/SobreMi.html
+++ b/HTML/SobreMi.html
@@ -6,10 +6,12 @@
   <link rel="stylesheet" href="../ESTILOS/SobreMi.css">
 </head>
 <body>
+<fieldset>
 <a href="index.html">Volver</a>
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sed pharetra risus. Donec blandit porttitor nunc, eu volutpat tortor porta vitae.</p>
-<p>Integer lectus nunc, aliquet nec libero nec, commodo aliquet nunc. Donec accumsan, massa sed dapibus cursus, dui urna elementum urna, a bibendum nibh dui eu nibh.</p>
-<p>Aliquam eu lacus ac purus semper lobortis. Donec gravida risus ac ultricies pretium. Sed sit amet suscipit arcu. Morbi ante justo, pulvinar nec efficitur eu,</p>
-<p>elementum sed arcu. Duis id enim eget arcu venenatis sollicitudin at et mauris. Vestibulum vel euismod urna, vel molestie sem.</p>
+<p>Hola soy Óscar Uceda Vázquez, tengo 18 años y estoy estudiando el grado superior de Desarrollo de Aplicaciones Multimedia en el IES Cristobal de Monroy</p>
+    <p>Cuando acabe este grado superior voy a hacer el segundo año de web y luego me gustaria trabajar de back end en alguna empresa</p>
+<p>Ahora mismo estoy escribiendo esta pagina web, donde hay un p y tengo que rellenar con informacion y no se que poner la verdad asique supongo que esto vale</p>
+<p>Me gusta la saga de peliculas de john wick, aficionado de los videojuegos y intento aprender programacion</p>
+</fieldset>
 </body>
 </html>
