--- a/HTML/Trabajos.html
+++ b/HTML/Trabajos.html
@@ -6,13 +6,17 @@
     <link rel="stylesheet" href="../ESTILOS/Trabajos.css">
 </head>
 <body>
+<fieldset>
 <a href="index.html">Volver</a>
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sed pharetra risus. Donec blandit porttitor nunc, eu volutpat tortor porta vitae.</p>
-<p>Integer lectus nunc, aliquet nec libero nec, commodo aliquet nunc. Donec accumsan, massa sed dapibus cursus, dui urna elementum urna, a bibendum nibh dui eu nibh.</p>
-<p>Aliquam eu lacus ac purus semper lobortis. Donec gravida risus ac ultricies pretium. Sed sit amet suscipit arcu. Morbi ante justo, pulvinar nec efficitur eu,</p>
-<p>elementum sed arcu. Duis id enim eget arcu venenatis sollicitudin at et mauris. Vestibulum vel euismod urna, vel molestie sem.</p>
+<p>Esta pagina esta dedicada a un resumen de las actividades anteriores, experiencia, etc.</p>
+<p>En las practicas de grado medio estuve 3 meses trabajando en una tienda de informatica llamada Microzone</p>
+<p>Ahi estuve haciendo varias cosas, una de esas hice parte de la pagina web de la propia tienda</p>
+<p>Aparte de eso en el grado medio hice actividades varias como practica</p>
+<br/>
+<p> Ejemplos de mis trabajos</p>
 
 <a href="../trabajos/Ejercicio11Oscaruceda/HTML/Ejercicio11_Lenguajedemarcashtmloscaruceda.html" target="_blank">Trabajo 1</a>
 <a href="../trabajos/Ejercicio12LenguajedemarcasOUV.html" target="_blank">Trabajo 2</a>
+</fieldset>
 </body>
 </html>
