--- a/HTML/index.html
+++ b/HTML/index.html
@@ -9,18 +9,16 @@
     <meta name="description" content="Simple HTML5 Page layout template with header, footer, sidebar etc.">
 	<script src="../JAVASCRIPT/script.js"></script>
 	<link rel="stylesheet" href="../ESTILOS/style.css">
-
 </head>
-
 <body>
 	<header>
-		<div id="logo">Pagina&nbsp;Principal</div>
-		<nav>  
+		<div id="cabecera">Portfolio OUV</div>
+		<nav>
 			<ul>
-				<li><a href="CV.html" target="_blank">CV</a>
-				<li><a href="SobreMi.html" target="_blank">Sobre Mi</a>
-				<li><a href="Aficiones.html" target="_blank">Aficiones</a>
-				<li><a href="Trabajos.html" target="_blank">Trabajos</a>
+				<li><a href="CV.html">CV</a>
+				<li><a href="SobreMi.html">Sobre Mi</a>
+				<li><a href="Aficiones.html">Aficiones</a>
+				<li><a href="Trabajos.html">Trabajos</a>
 			</ul>
 		</nav>
 	</header>
@@ -54,8 +52,6 @@
 	</section>
 	<footer>
 		<p>Practica del IES Cristobal de Monroy Lenguaje de marcas</p>
-		<p>Hola este p es nuevo y lo hago para enseñar a hacer commit en github</p>
-		<p>Hola mi asignatura favorita es entorno de desarrollo y voy a hacer pull</p>
 	</footer>
 </body>
 
