24/02/2025 - v.1.0.0 - ouceda - Se ha terminado el portfolio

--- a/HTML/CV.html
+++ b/HTML/CV.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <fieldset>
-<a href="index.html">Volver</a>
+<a href="../index.html">Volver</a>
 <p>Aqui dejo mi ultimo curriculum que he hecho</p>
 <br/>
 <img src="../imagenes/Óscar uceda Vázquez CV-1.png" height="1500" width="1000"/>
