--- a/HTML/SobreMi.html
+++ b/HTML/SobreMi.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <fieldset>
-<a href="index.html">Volver</a>
+<a href="../index.html">Volver</a>
 <p>Hola soy Óscar Uceda Vázquez, tengo 18 años y estoy estudiando el grado superior de Desarrollo de Aplicaciones Multimedia en el IES Cristobal de Monroy</p>
     <p>Cuando acabe este grado superior voy a hacer el segundo año de web y luego me gustaria trabajar de back end en alguna empresa</p>
 <p>Ahora mismo estoy escribiendo esta pagina web, donde hay un p y tengo que rellenar con informacion y no se que poner la verdad asique supongo que esto vale</p>
