--- a/HTML/Trabajos.html
+++ b/HTML/Trabajos.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <fieldset>
-<a href="index.html">Volver</a>
+<a href="../index.html">Volver</a>
 <p>Esta pagina esta dedicada a un resumen de las actividades anteriores, experiencia, etc.</p>
 <p>En las practicas de grado medio estuve 3 meses trabajando en una tienda de informatica llamada Microzone</p>
 <p>Ahi estuve haciendo varias cosas, una de esas hice parte de la pagina web de la propia tienda</p>
