--- a/index.html
+++ b/index.html
@@ -7,18 +7,18 @@
     <link rel="canonical" href="https://html5-templates.com/" />
     <title>Portfolio OUV LMSGI</title>
     <meta name="description" content="Simple HTML5 Page layout template with header, footer, sidebar etc.">
-	<script src="../JAVASCRIPT/script.js"></script>
-	<link rel="stylesheet" href="../ESTILOS/style.css">
+	<script src="JAVASCRIPT/script.js"></script>
+	<link rel="stylesheet" href="ESTILOS/style.css">
 </head>
 <body>
 	<header>
 		<div id="cabecera">Portfolio OUV</div>
 		<nav>
 			<ul>
-				<li><a href="CV.html">CV</a>
-				<li><a href="SobreMi.html">Sobre Mi</a>
-				<li><a href="Aficiones.html">Aficiones</a>
-				<li><a href="Trabajos.html">Trabajos</a>
+				<li><a href="HTML/CV.html">CV</a>
+				<li><a href="HTML/SobreMi.html">Sobre Mi</a>
+				<li><a href="HTML/Aficiones.html">Aficiones</a>
+				<li><a href="HTML/Trabajos.html">Trabajos</a>
 			</ul>
 		</nav>
 	</header>
@@ -45,7 +45,7 @@
 			</article>
 		</main>
 		<aside>
-			<div><img src="../imagenes/evil-larry-larry.gif" height="200" width="191"/> <p>He contratado a este gato para vigilarte</p></div>
+			<div><img src="imagenes/evil-larry-larry.gif" height="200" width="191"/> <p>He contratado a este gato para vigilarte</p></div>
 			<div>texto muy importante para la pagina</div>
 			<div>Me encanta lenguaje de marcas</div>
 		</aside>
