--- a/HTML/Aficiones.html
+++ b/HTML/Aficiones.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <fieldset>
-<a href="index.html">Volver</a>
+<a href="../index.html">Volver</a>
 <p>Mis aficiones son la programacion, videojuegos, musica y el gimnasio, tambien he visto series como invencible, breaking bad y la casa de papel.</p>
     <p>Tambien tengo 2 gatos y 2 perros.</p>
     <img src="../imagenes/BB_T5A-Heisenberg.jpg" height="480" width="360"/>
